--- a/app/views/chart.html
+++ b/app/views/chart.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta charset="UTF-8">
 <title>Chart</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
     function send() {
         var params = {
@@ -12,6 +13,8 @@
         }
         $.get("/api/candle/", params).done(function (data){
             console.log(data)
+            var candles = data["candles"]
+            $('#dashboard_div').append(candles[0].open + "<br>")
         })
     }
     
@@ -21,5 +24,10 @@
     }
 
 </script>
+</head>
+
+<body>
+<div id="dashboard_div"></div>
+</body>
 
 </html>
